src/Parser/gramatica.output
Gramática

    0 $accept: programa $end

    1 programa: '{' sentencias '}'
    2         | '{' sentencias
    3         | sentencias '}'

    4 sentencias: sentencia
    5           | sentencias sentencia

    6 sentencia: declarativa ','
    7          | ejecutable ','

    8 declarativa: declaracion_variables
    9            | clase_declaration
   10            | objeto_declaration
   11            | interface_declaration
   12            | implement_declaration
   13            | distributed_method_implementation
   14            | funcion_declaration

   15 ejecutable: asignacion
   16           | invocacion
   17           | seleccion
   18           | print
   19           | bucle_for
   20           | acceso_atributo
   21           | retorno

   22 declaracion_variables: tipo lista_variables
   23                      | error lista_variables

   24 lista_variables: lista_variables ';' ID
   25                | ID
   26                | ID error ','

   27 encabezado_clase: CLASS ID

   28 clase_declaration: encabezado_clase '{' atributos metodos_clase herencia_composicion '}'

   29 encabezado_interfaz: INTERFACE ID

   30 interface_declaration: encabezado_interfaz '{' interface_metodos '}'

   31 interface_metodos: interface_metodos interface_metodo_declaration
   32                  | /* vacío */

   33 encabezado_funcion: VOID ID

   34 interface_metodo_declaration: encabezado_funcion '(' parametro ')' ','

   35 encabezado_implement: CLASS ID IMPLEMENT ID

   36 implement_declaration: encabezado_implement '{' metodos_clase herencia_composicion '}'

   37 atributos: atributos atributo_declaration
   38          | /* vacío */

   39 atributo_declaration: declaracion_variables ','

   40 metodos_clase: metodos_clase metodo_declaration
   41              | /* vacío */

   42 metodo_declaration: funcion_declaration ','

   43 funcion_declaration: encabezado_funcion '(' parametro ')' '{' sentencias_metodo '}'
   44                    | /* vacío */

   45 herencia_composicion: herencia_composicion ID ','
   46                     | /* vacío */

   47 sentencias_metodo: sentencias_metodo declaracion_variables ','
   48                  | sentencias_metodo ejecutable ','
   49                  | sentencias_metodo local_function_declaration ','
   50                  | /* vacío */

   51 local_function_declaration: encabezado_funcion '(' parametro ')' '{' sentencias_funcion_local '}'

   52 sentencias_funcion_local: sentencias_funcion_local declaracion_variables ','
   53                         | sentencias_funcion_local ejecutable ','
   54                         | sentencias_funcion_local local_function_declaration ','
   55                         | /* vacío */

   56 parametro: tipo ID
   57          | ID
   58          | parametro ';' tipo ID
   59          | /* vacío */

   60 distributed_method_implementation: IMPL FOR ID ':' '{' metodos_clase '}'

   61 retorno: RETURN

   62 objeto_declaration: ID lista_objetos

   63 lista_objetos: lista_objetos ';' objeto
   64              | objeto

   65 objeto: ID

   66 asignacion: ID asignador expresion
   67           | ID '.' ID asignador expresion
   68           | ID asignador
   69           | ID '.' ID asignador
   70           | ID asignador '-'

   71 asignador: '='
   72          | PLUS_EQUAL

   73 invocacion: ID '(' argumentos ')'
   74           | ID '.' ID '(' argumentos ')'

   75 argumentos: expresion
   76           | argumentos ';' expresion
   77           | /* vacío */

   78 seleccion: IF '(' condicion ')' bloque_if ELSE bloque_else END_IF
   79          | IF '(' condicion ')' bloque_if END_IF
   80          | IF '(' condicion ')' bloque_if
   81          | IF '(' condicion ')' bloque_if ELSE bloque_else

   82 bloque_if: bloque_sentencias

   83 bloque_else: bloque_sentencias

   84 condicion: expresion comparador expresion
   85          | expresion comparador
   86          | comparador expresion
   87          | expresion

   88 comparador: '<'
   89           | '>'
   90           | LESS_EQUAL
   91           | GREATER_EQUAL
   92           | EQUAL
   93           | NOT_EQUAL

   94 bloque_sentencias: sentencia
   95                  | '{' sentencias '}'

   96 print: PRINT STRING
   97      | PRINT
   98      | STRING

   99 bucle_for: encabezado_for '(' argumento_bucle_for ')' bloque_sentencias
  100          | encabezado_for '(' argumento_bucle_for bloque_sentencias
  101          | encabezado_for argumento_bucle_for ')' bloque_sentencias

  102 encabezado_for: FOR ID IN RANGE
  103               | ID IN RANGE
  104               | FOR IN RANGE
  105               | FOR ID IN
  106               | FOR ID RANGE

  107 argumento_bucle_for: constante ';' constante ';' constante
  108                    | constante ';' constante
  109                    | constante
  110                    | /* vacío */

  111 acceso_atributo: ID '.' ID

  112 expresion: expresion '+' termino
  113          | expresion '-' termino
  114          | tipo '(' expresion ')'
  115          | expresion '+' '(' expresion_parentesis ')'
  116          | expresion '-' '(' expresion_parentesis ')'
  117          | '(' expresion_parentesis ')'
  118          | termino

  119 expresion_parentesis: '(' expresion_parentesis ')'
  120                     | termino '+' termino
  121                     | termino '-' termino
  122                     | termino

  123 termino: factor
  124        | termino '*' factor
  125        | termino '/' factor

  126 factor: ID
  127       | '-' constante
  128       | constante

  129 constante: CTE_SHORT
  130          | CTE_DOUBLE
  131          | CTE_UINT

  132 tipo: SHORT
  133     | UINT
  134     | DOUBLE


Terminales con las reglas donde aparecen

$end (0) 0
'(' (40) 34 43 51 73 74 78 79 80 81 99 100 114 115 116 117 119
')' (41) 34 43 51 73 74 78 79 80 81 99 101 114 115 116 117 119
'*' (42) 124
'+' (43) 112 115 120
',' (44) 6 7 26 34 39 42 45 47 48 49 52 53 54
'-' (45) 70 113 116 121 127
'.' (46) 67 69 74 111
'/' (47) 125
':' (58) 60
';' (59) 24 58 63 76 107 108
'<' (60) 88
'=' (61) 71
'>' (62) 89
'{' (123) 1 2 28 30 36 43 51 60 95
'}' (125) 1 3 28 30 36 43 51 60 95
error (256) 23 26
SHORT (258) 132
UINT (259) 133
DOUBLE (260) 134
VOID (261) 33
CLASS (262) 27 35
INTERFACE (263) 29
IMPLEMENT (264) 35
IMPL (265) 60
IF (266) 78 79 80 81
ELSE (267) 78 81
END_IF (268) 78 79
PRINT (269) 96 97
FOR (270) 60 102 104 105 106
IN (271) 102 103 104 105
RANGE (272) 102 103 104 106
RETURN (273) 61
LESS_EQUAL (274) 90
GREATER_EQUAL (275) 91
EQUAL (276) 92
NOT_EQUAL (277) 93
PLUS_EQUAL (278) 72
ID (279) 24 25 26 27 29 33 35 45 56 57 58 60 62 65 66 67 68 69 70 73
    74 102 103 105 106 111 126
STRING (280) 96 98
CTE_SHORT (281) 129
CTE_UINT (282) 131
CTE_DOUBLE (283) 130


No terminales con las reglas donde aparecen

$accept (44)
    en la izquierda: 0
programa (45)
    en la izquierda: 1 2 3, en la derecha: 0
sentencias (46)
    en la izquierda: 4 5, en la derecha: 1 2 3 5 95
sentencia (47)
    en la izquierda: 6 7, en la derecha: 4 5 94
declarativa (48)
    en la izquierda: 8 9 10 11 12 13 14, en la derecha: 6
ejecutable (49)
    en la izquierda: 15 16 17 18 19 20 21, en la derecha: 7 48 53
declaracion_variables (50)
    en la izquierda: 22 23, en la derecha: 8 39 47 52
lista_variables (51)
    en la izquierda: 24 25 26, en la derecha: 22 23 24
encabezado_clase (52)
    en la izquierda: 27, en la derecha: 28
clase_declaration (53)
    en la izquierda: 28, en la derecha: 9
encabezado_interfaz (54)
    en la izquierda: 29, en la derecha: 30
interface_declaration (55)
    en la izquierda: 30, en la derecha: 11
interface_metodos (56)
    en la izquierda: 31 32, en la derecha: 30 31
encabezado_funcion (57)
    en la izquierda: 33, en la derecha: 34 43 51
interface_metodo_declaration (58)
    en la izquierda: 34, en la derecha: 31
encabezado_implement (59)
    en la izquierda: 35, en la derecha: 36
implement_declaration (60)
    en la izquierda: 36, en la derecha: 12
atributos (61)
    en la izquierda: 37 38, en la derecha: 28 37
atributo_declaration (62)
    en la izquierda: 39, en la derecha: 37
metodos_clase (63)
    en la izquierda: 40 41, en la derecha: 28 36 40 60
metodo_declaration (64)
    en la izquierda: 42, en la derecha: 40
funcion_declaration (65)
    en la izquierda: 43 44, en la derecha: 14 42
herencia_composicion (66)
    en la izquierda: 45 46, en la derecha: 28 36 45
sentencias_metodo (67)
    en la izquierda: 47 48 49 50, en la derecha: 43 47 48 49
local_function_declaration (68)
    en la izquierda: 51, en la derecha: 49 54
sentencias_funcion_local (69)
    en la izquierda: 52 53 54 55, en la derecha: 51 52 53 54
parametro (70)
    en la izquierda: 56 57 58 59, en la derecha: 34 43 51 58
distributed_method_implementation (71)
    en la izquierda: 60, en la derecha: 13
retorno (72)
    en la izquierda: 61, en la derecha: 21
objeto_declaration (73)
    en la izquierda: 62, en la derecha: 10
lista_objetos (74)
    en la izquierda: 63 64, en la derecha: 62 63
objeto (75)
    en la izquierda: 65, en la derecha: 63 64
asignacion (76)
    en la izquierda: 66 67 68 69 70, en la derecha: 15
asignador (77)
    en la izquierda: 71 72, en la derecha: 66 67 68 69 70
invocacion (78)
    en la izquierda: 73 74, en la derecha: 16
argumentos (79)
    en la izquierda: 75 76 77, en la derecha: 73 74 76
seleccion (80)
    en la izquierda: 78 79 80 81, en la derecha: 17
bloque_if (81)
    en la izquierda: 82, en la derecha: 78 79 80 81
bloque_else (82)
    en la izquierda: 83, en la derecha: 78 81
condicion (83)
    en la izquierda: 84 85 86 87, en la derecha: 78 79 80 81
comparador (84)
    en la izquierda: 88 89 90 91 92 93, en la derecha: 84 85 86
bloque_sentencias (85)
    en la izquierda: 94 95, en la derecha: 82 83 99 100 101
print (86)
    en la izquierda: 96 97 98, en la derecha: 18
bucle_for (87)
    en la izquierda: 99 100 101, en la derecha: 19
encabezado_for (88)
    en la izquierda: 102 103 104 105 106, en la derecha: 99 100 101
argumento_bucle_for (89)
    en la izquierda: 107 108 109 110, en la derecha: 99 100 101
acceso_atributo (90)
    en la izquierda: 111, en la derecha: 20
expresion (91)
    en la izquierda: 112 113 114 115 116 117 118, en la derecha: 66
    67 75 76 84 85 86 87 112 113 114 115 116
expresion_parentesis (92)
    en la izquierda: 119 120 121 122, en la derecha: 115 116 117 119
termino (93)
    en la izquierda: 123 124 125, en la derecha: 112 113 118 120 121
    122 124 125
factor (94)
    en la izquierda: 126 127 128, en la derecha: 123 124 125
constante (95)
    en la izquierda: 129 130 131, en la derecha: 107 108 109 127 128
tipo (96)
    en la izquierda: 132 133 134, en la derecha: 22 56 58 114


estado 0

    0 $accept: . programa $end

    error      desplazar e ir al estado 1
    SHORT      desplazar e ir al estado 2
    UINT       desplazar e ir al estado 3
    DOUBLE     desplazar e ir al estado 4
    VOID       desplazar e ir al estado 5
    CLASS      desplazar e ir al estado 6
    INTERFACE  desplazar e ir al estado 7
    IMPL       desplazar e ir al estado 8
    IF         desplazar e ir al estado 9
    PRINT      desplazar e ir al estado 10
    FOR        desplazar e ir al estado 11
    RETURN     desplazar e ir al estado 12
    ID         desplazar e ir al estado 13
    STRING     desplazar e ir al estado 14
    '{'        desplazar e ir al estado 15

    ','  reduce usando la regla 44 (funcion_declaration)

    programa                           ir al estado 16
    sentencias                         ir al estado 17
    sentencia                          ir al estado 18
    declarativa                        ir al estado 19
    ejecutable                         ir al estado 20
    declaracion_variables              ir al estado 21
    encabezado_clase                   ir al estado 22
    clase_declaration                  ir al estado 23
    encabezado_interfaz                ir al estado 24
    interface_declaration              ir al estado 25
    encabezado_funcion                 ir al estado 26
    encabezado_implement               ir al estado 27
    implement_declaration              ir al estado 28
    funcion_declaration                ir al estado 29
    distributed_method_implementation  ir al estado 30
    retorno                            ir al estado 31
    objeto_declaration                 ir al estado 32
    asignacion                         ir al estado 33
    invocacion                         ir al estado 34
    seleccion                          ir al estado 35
    print                              ir al estado 36
    bucle_for                          ir al estado 37
    encabezado_for                     ir al estado 38
    acceso_atributo                    ir al estado 39
    tipo                               ir al estado 40


estado 1

   23 declaracion_variables: error . lista_variables

    ID  desplazar e ir al estado 41

    lista_variables  ir al estado 42


estado 2

  132 tipo: SHORT .

    $default  reduce usando la regla 132 (tipo)


estado 3

  133 tipo: UINT .

    $default  reduce usando la regla 133 (tipo)


estado 4

  134 tipo: DOUBLE .

    $default  reduce usando la regla 134 (tipo)


estado 5

   33 encabezado_funcion: VOID . ID

    ID  desplazar e ir al estado 43


estado 6

   27 encabezado_clase: CLASS . ID
   35 encabezado_implement: CLASS . ID IMPLEMENT ID

    ID  desplazar e ir al estado 44


estado 7

   29 encabezado_interfaz: INTERFACE . ID

    ID  desplazar e ir al estado 45


estado 8

   60 distributed_method_implementation: IMPL . FOR ID ':' '{' metodos_clase '}'

    FOR  desplazar e ir al estado 46


estado 9

   78 seleccion: IF . '(' condicion ')' bloque_if ELSE bloque_else END_IF
   79          | IF . '(' condicion ')' bloque_if END_IF
   80          | IF . '(' condicion ')' bloque_if
   81          | IF . '(' condicion ')' bloque_if ELSE bloque_else

    '('  desplazar e ir al estado 47


estado 10

   96 print: PRINT . STRING
   97      | PRINT .

    STRING  desplazar e ir al estado 48

    $default  reduce usando la regla 97 (print)


estado 11

  102 encabezado_for: FOR . ID IN RANGE
  104               | FOR . IN RANGE
  105               | FOR . ID IN
  106               | FOR . ID RANGE

    IN  desplazar e ir al estado 49
    ID  desplazar e ir al estado 50


estado 12

   61 retorno: RETURN .

    $default  reduce usando la regla 61 (retorno)


estado 13

   62 objeto_declaration: ID . lista_objetos
   66 asignacion: ID . asignador expresion
   67           | ID . '.' ID asignador expresion
   68           | ID . asignador
   69           | ID . '.' ID asignador
   70           | ID . asignador '-'
   73 invocacion: ID . '(' argumentos ')'
   74           | ID . '.' ID '(' argumentos ')'
  103 encabezado_for: ID . IN RANGE
  111 acceso_atributo: ID . '.' ID

    IN          desplazar e ir al estado 51
    PLUS_EQUAL  desplazar e ir al estado 52
    ID          desplazar e ir al estado 53
    '='         desplazar e ir al estado 54
    '.'         desplazar e ir al estado 55
    '('         desplazar e ir al estado 56

    lista_objetos  ir al estado 57
    objeto         ir al estado 58
    asignador      ir al estado 59


estado 14

   98 print: STRING .

    $default  reduce usando la regla 98 (print)


estado 15

    1 programa: '{' . sentencias '}'
    2         | '{' . sentencias

    error      desplazar e ir al estado 1
    SHORT      desplazar e ir al estado 2
    UINT       desplazar e ir al estado 3
    DOUBLE     desplazar e ir al estado 4
    VOID       desplazar e ir al estado 5
    CLASS      desplazar e ir al estado 6
    INTERFACE  desplazar e ir al estado 7
    IMPL       desplazar e ir al estado 8
    IF         desplazar e ir al estado 9
    PRINT      desplazar e ir al estado 10
    FOR        desplazar e ir al estado 11
    RETURN     desplazar e ir al estado 12
    ID         desplazar e ir al estado 13
    STRING     desplazar e ir al estado 14

    ','  reduce usando la regla 44 (funcion_declaration)

    sentencias                         ir al estado 60
    sentencia                          ir al estado 18
    declarativa                        ir al estado 19
    ejecutable                         ir al estado 20
    declaracion_variables              ir al estado 21
    encabezado_clase                   ir al estado 22
    clase_declaration                  ir al estado 23
    encabezado_interfaz                ir al estado 24
    interface_declaration              ir al estado 25
    encabezado_funcion                 ir al estado 26
    encabezado_implement               ir al estado 27
    implement_declaration              ir al estado 28
    funcion_declaration                ir al estado 29
    distributed_method_implementation  ir al estado 30
    retorno                            ir al estado 31
    objeto_declaration                 ir al estado 32
    asignacion                         ir al estado 33
    invocacion                         ir al estado 34
    seleccion                          ir al estado 35
    print                              ir al estado 36
    bucle_for                          ir al estado 37
    encabezado_for                     ir al estado 38
    acceso_atributo                    ir al estado 39
    tipo                               ir al estado 40


estado 16

    0 $accept: programa . $end

    $end  desplazar e ir al estado 61


estado 17

    3 programa: sentencias . '}'
    5 sentencias: sentencias . sentencia

    error      desplazar e ir al estado 1
    SHORT      desplazar e ir al estado 2
    UINT       desplazar e ir al estado 3
    DOUBLE     desplazar e ir al estado 4
    VOID       desplazar e ir al estado 5
    CLASS      desplazar e ir al estado 6
    INTERFACE  desplazar e ir al estado 7
    IMPL       desplazar e ir al estado 8
    IF         desplazar e ir al estado 9
    PRINT      desplazar e ir al estado 10
    FOR        desplazar e ir al estado 11
    RETURN     desplazar e ir al estado 12
    ID         desplazar e ir al estado 13
    STRING     desplazar e ir al estado 14
    '}'        desplazar e ir al estado 62

    ','  reduce usando la regla 44 (funcion_declaration)

    sentencia                          ir al estado 63
    declarativa                        ir al estado 19
    ejecutable                         ir al estado 20
    declaracion_variables              ir al estado 21
    encabezado_clase                   ir al estado 22
    clase_declaration                  ir al estado 23
    encabezado_interfaz                ir al estado 24
    interface_declaration              ir al estado 25
    encabezado_funcion                 ir al estado 26
    encabezado_implement               ir al estado 27
    implement_declaration              ir al estado 28
    funcion_declaration                ir al estado 29
    distributed_method_implementation  ir al estado 30
    retorno                            ir al estado 31
    objeto_declaration                 ir al estado 32
    asignacion                         ir al estado 33
    invocacion                         ir al estado 34
    seleccion                          ir al estado 35
    print                              ir al estado 36
    bucle_for                          ir al estado 37
    encabezado_for                     ir al estado 38
    acceso_atributo                    ir al estado 39
    tipo                               ir al estado 40


estado 18

    4 sentencias: sentencia .

    $default  reduce usando la regla 4 (sentencias)


estado 19

    6 sentencia: declarativa . ','

    ','  desplazar e ir al estado 64


estado 20

    7 sentencia: ejecutable . ','

    ','  desplazar e ir al estado 65


estado 21

    8 declarativa: declaracion_variables .

    $default  reduce usando la regla 8 (declarativa)


estado 22

   28 clase_declaration: encabezado_clase . '{' atributos metodos_clase herencia_composicion '}'

    '{'  desplazar e ir al estado 66


estado 23

    9 declarativa: clase_declaration .

    $default  reduce usando la regla 9 (declarativa)


estado 24

   30 interface_declaration: encabezado_interfaz . '{' interface_metodos '}'

    '{'  desplazar e ir al estado 67


estado 25

   11 declarativa: interface_declaration .

    $default  reduce usando la regla 11 (declarativa)


estado 26

   43 funcion_declaration: encabezado_funcion . '(' parametro ')' '{' sentencias_metodo '}'

    '('  desplazar e ir al estado 68


estado 27

   36 implement_declaration: encabezado_implement . '{' metodos_clase herencia_composicion '}'

    '{'  desplazar e ir al estado 69


estado 28

   12 declarativa: implement_declaration .

    $default  reduce usando la regla 12 (declarativa)


estado 29

   14 declarativa: funcion_declaration .

    $default  reduce usando la regla 14 (declarativa)


estado 30

   13 declarativa: distributed_method_implementation .

    $default  reduce usando la regla 13 (declarativa)


estado 31

   21 ejecutable: retorno .

    $default  reduce usando la regla 21 (ejecutable)


estado 32

   10 declarativa: objeto_declaration .

    $default  reduce usando la regla 10 (declarativa)


estado 33

   15 ejecutable: asignacion .

    $default  reduce usando la regla 15 (ejecutable)


estado 34

   16 ejecutable: invocacion .

    $default  reduce usando la regla 16 (ejecutable)


estado 35

   17 ejecutable: seleccion .

    $default  reduce usando la regla 17 (ejecutable)


estado 36

   18 ejecutable: print .

    $default  reduce usando la regla 18 (ejecutable)


estado 37

   19 ejecutable: bucle_for .

    $default  reduce usando la regla 19 (ejecutable)


estado 38

   99 bucle_for: encabezado_for . '(' argumento_bucle_for ')' bloque_sentencias
  100          | encabezado_for . '(' argumento_bucle_for bloque_sentencias
  101          | encabezado_for . argumento_bucle_for ')' bloque_sentencias

    CTE_SHORT   desplazar e ir al estado 70
    CTE_UINT    desplazar e ir al estado 71
    CTE_DOUBLE  desplazar e ir al estado 72
    '('         desplazar e ir al estado 73

    $default  reduce usando la regla 110 (argumento_bucle_for)

    argumento_bucle_for  ir al estado 74
    constante            ir al estado 75


estado 39

   20 ejecutable: acceso_atributo .

    $default  reduce usando la regla 20 (ejecutable)


estado 40

   22 declaracion_variables: tipo . lista_variables

    ID  desplazar e ir al estado 41

    lista_variables  ir al estado 76


estado 41

   25 lista_variables: ID .
   26                | ID . error ','

    error  desplazar e ir al estado 77

    ','  reduce usando la regla 25 (lista_variables)
    ';'  reduce usando la regla 25 (lista_variables)


estado 42

   23 declaracion_variables: error lista_variables .
   24 lista_variables: lista_variables . ';' ID

    ';'  desplazar e ir al estado 78

    $default  reduce usando la regla 23 (declaracion_variables)


estado 43

   33 encabezado_funcion: VOID ID .

    $default  reduce usando la regla 33 (encabezado_funcion)


estado 44

   27 encabezado_clase: CLASS ID .
   35 encabezado_implement: CLASS ID . IMPLEMENT ID

    IMPLEMENT  desplazar e ir al estado 79

    $default  reduce usando la regla 27 (encabezado_clase)


estado 45

   29 encabezado_interfaz: INTERFACE ID .

    $default  reduce usando la regla 29 (encabezado_interfaz)


estado 46

   60 distributed_method_implementation: IMPL FOR . ID ':' '{' metodos_clase '}'

    ID  desplazar e ir al estado 80


estado 47

   78 seleccion: IF '(' . condicion ')' bloque_if ELSE bloque_else END_IF
   79          | IF '(' . condicion ')' bloque_if END_IF
   80          | IF '(' . condicion ')' bloque_if
   81          | IF '(' . condicion ')' bloque_if ELSE bloque_else

    SHORT          desplazar e ir al estado 2
    UINT           desplazar e ir al estado 3
    DOUBLE         desplazar e ir al estado 4
    LESS_EQUAL     desplazar e ir al estado 81
    GREATER_EQUAL  desplazar e ir al estado 82
    EQUAL          desplazar e ir al estado 83
    NOT_EQUAL      desplazar e ir al estado 84
    ID             desplazar e ir al estado 85
    CTE_SHORT      desplazar e ir al estado 70
    CTE_UINT       desplazar e ir al estado 71
    CTE_DOUBLE     desplazar e ir al estado 72
    '('            desplazar e ir al estado 86
    '-'            desplazar e ir al estado 87
    '<'            desplazar e ir al estado 88
    '>'            desplazar e ir al estado 89

    condicion   ir al estado 90
    comparador  ir al estado 91
    expresion   ir al estado 92
    termino     ir al estado 93
    factor      ir al estado 94
    constante   ir al estado 95
    tipo        ir al estado 96


estado 48

   96 print: PRINT STRING .

    $default  reduce usando la regla 96 (print)


estado 49

  104 encabezado_for: FOR IN . RANGE

    RANGE  desplazar e ir al estado 97


estado 50

  102 encabezado_for: FOR ID . IN RANGE
  105               | FOR ID . IN
  106               | FOR ID . RANGE

    IN     desplazar e ir al estado 98
    RANGE  desplazar e ir al estado 99


estado 51

  103 encabezado_for: ID IN . RANGE

    RANGE  desplazar e ir al estado 100


estado 52

   72 asignador: PLUS_EQUAL .

    $default  reduce usando la regla 72 (asignador)


estado 53

   65 objeto: ID .

    $default  reduce usando la regla 65 (objeto)


estado 54

   71 asignador: '=' .

    $default  reduce usando la regla 71 (asignador)


estado 55

   67 asignacion: ID '.' . ID asignador expresion
   69           | ID '.' . ID asignador
   74 invocacion: ID '.' . ID '(' argumentos ')'
  111 acceso_atributo: ID '.' . ID

    ID  desplazar e ir al estado 101


estado 56

   73 invocacion: ID '(' . argumentos ')'

    SHORT       desplazar e ir al estado 2
    UINT        desplazar e ir al estado 3
    DOUBLE      desplazar e ir al estado 4
    ID          desplazar e ir al estado 85
    CTE_SHORT   desplazar e ir al estado 70
    CTE_UINT    desplazar e ir al estado 71
    CTE_DOUBLE  desplazar e ir al estado 72
    '('         desplazar e ir al estado 86
    '-'         desplazar e ir al estado 87

    $default  reduce usando la regla 77 (argumentos)

    argumentos  ir al estado 102
    expresion   ir al estado 103
    termino     ir al estado 93
    factor      ir al estado 94
    constante   ir al estado 95
    tipo        ir al estado 96


estado 57

   62 objeto_declaration: ID lista_objetos .
   63 lista_objetos: lista_objetos . ';' objeto

    ';'  desplazar e ir al estado 104

    $default  reduce usando la regla 62 (objeto_declaration)


estado 58

   64 lista_objetos: objeto .

    $default  reduce usando la regla 64 (lista_objetos)


estado 59

   66 asignacion: ID asignador . expresion
   68           | ID asignador .
   70           | ID asignador . '-'

    SHORT       desplazar e ir al estado 2
    UINT        desplazar e ir al estado 3
    DOUBLE      desplazar e ir al estado 4
    ID          desplazar e ir al estado 85
    CTE_SHORT   desplazar e ir al estado 70
    CTE_UINT    desplazar e ir al estado 71
    CTE_DOUBLE  desplazar e ir al estado 72
    '('         desplazar e ir al estado 86
    '-'         desplazar e ir al estado 105

    $default  reduce usando la regla 68 (asignacion)

    expresion  ir al estado 106
    termino    ir al estado 93
    factor     ir al estado 94
    constante  ir al estado 95
    tipo       ir al estado 96


estado 60

    1 programa: '{' sentencias . '}'
    2         | '{' sentencias .
    5 sentencias: sentencias . sentencia

    error      desplazar e ir al estado 1
    SHORT      desplazar e ir al estado 2
    UINT       desplazar e ir al estado 3
    DOUBLE     desplazar e ir al estado 4
    VOID       desplazar e ir al estado 5
    CLASS      desplazar e ir al estado 6
    INTERFACE  desplazar e ir al estado 7
    IMPL       desplazar e ir al estado 8
    IF         desplazar e ir al estado 9
    PRINT      desplazar e ir al estado 10
    FOR        desplazar e ir al estado 11
    RETURN     desplazar e ir al estado 12
    ID         desplazar e ir al estado 13
    STRING     desplazar e ir al estado 14
    '}'        desplazar e ir al estado 107

    $end  reduce usando la regla 2 (programa)
    ','   reduce usando la regla 44 (funcion_declaration)

    sentencia                          ir al estado 63
    declarativa                        ir al estado 19
    ejecutable                         ir al estado 20
    declaracion_variables              ir al estado 21
    encabezado_clase                   ir al estado 22
    clase_declaration                  ir al estado 23
    encabezado_interfaz                ir al estado 24
    interface_declaration              ir al estado 25
    encabezado_funcion                 ir al estado 26
    encabezado_implement               ir al estado 27
    implement_declaration              ir al estado 28
    funcion_declaration                ir al estado 29
    distributed_method_implementation  ir al estado 30
    retorno                            ir al estado 31
    objeto_declaration                 ir al estado 32
    asignacion                         ir al estado 33
    invocacion                         ir al estado 34
    seleccion                          ir al estado 35
    print                              ir al estado 36
    bucle_for                          ir al estado 37
    encabezado_for                     ir al estado 38
    acceso_atributo                    ir al estado 39
    tipo                               ir al estado 40


estado 61

    0 $accept: programa $end .

    $default  aceptar


estado 62

    3 programa: sentencias '}' .

    $default  reduce usando la regla 3 (programa)


estado 63

    5 sentencias: sentencias sentencia .

    $default  reduce usando la regla 5 (sentencias)


estado 64

    6 sentencia: declarativa ',' .

    $default  reduce usando la regla 6 (sentencia)


estado 65

    7 sentencia: ejecutable ',' .

    $default  reduce usando la regla 7 (sentencia)


estado 66

   28 clase_declaration: encabezado_clase '{' . atributos metodos_clase herencia_composicion '}'

    $default  reduce usando la regla 38 (atributos)

    atributos  ir al estado 108


estado 67

   30 interface_declaration: encabezado_interfaz '{' . interface_metodos '}'

    $default  reduce usando la regla 32 (interface_metodos)

    interface_metodos  ir al estado 109


estado 68

   43 funcion_declaration: encabezado_funcion '(' . parametro ')' '{' sentencias_metodo '}'

    SHORT   desplazar e ir al estado 2
    UINT    desplazar e ir al estado 3
    DOUBLE  desplazar e ir al estado 4
    ID      desplazar e ir al estado 110

    $default  reduce usando la regla 59 (parametro)

    parametro  ir al estado 111
    tipo       ir al estado 112


estado 69

   36 implement_declaration: encabezado_implement '{' . metodos_clase herencia_composicion '}'

    $default  reduce usando la regla 41 (metodos_clase)

    metodos_clase  ir al estado 113


estado 70

  129 constante: CTE_SHORT .

    $default  reduce usando la regla 129 (constante)


estado 71

  131 constante: CTE_UINT .

    $default  reduce usando la regla 131 (constante)


estado 72

  130 constante: CTE_DOUBLE .

    $default  reduce usando la regla 130 (constante)


estado 73

   99 bucle_for: encabezado_for '(' . argumento_bucle_for ')' bloque_sentencias
  100          | encabezado_for '(' . argumento_bucle_for bloque_sentencias

    CTE_SHORT   desplazar e ir al estado 70
    CTE_UINT    desplazar e ir al estado 71
    CTE_DOUBLE  desplazar e ir al estado 72

    $default  reduce usando la regla 110 (argumento_bucle_for)

    argumento_bucle_for  ir al estado 114
    constante            ir al estado 75


estado 74

  101 bucle_for: encabezado_for argumento_bucle_for . ')' bloque_sentencias

    ')'  desplazar e ir al estado 115


estado 75

  107 argumento_bucle_for: constante . ';' constante ';' constante
  108                    | constante . ';' constante
  109                    | constante .

    ';'  desplazar e ir al estado 116

    $default  reduce usando la regla 109 (argumento_bucle_for)


estado 76

   22 declaracion_variables: tipo lista_variables .
   24 lista_variables: lista_variables . ';' ID

    ';'  desplazar e ir al estado 78

    $default  reduce usando la regla 22 (declaracion_variables)


estado 77

   26 lista_variables: ID error . ','

    ','  desplazar e ir al estado 117


estado 78

   24 lista_variables: lista_variables ';' . ID

    ID  desplazar e ir al estado 118


estado 79

   35 encabezado_implement: CLASS ID IMPLEMENT . ID

    ID  desplazar e ir al estado 119


estado 80

   60 distributed_method_implementation: IMPL FOR ID . ':' '{' metodos_clase '}'

    ':'  desplazar e ir al estado 120


estado 81

   90 comparador: LESS_EQUAL .

    $default  reduce usando la regla 90 (comparador)


estado 82

   91 comparador: GREATER_EQUAL .

    $default  reduce usando la regla 91 (comparador)


estado 83

   92 comparador: EQUAL .

    $default  reduce usando la regla 92 (comparador)


estado 84

   93 comparador: NOT_EQUAL .

    $default  reduce usando la regla 93 (comparador)


estado 85

  126 factor: ID .

    $default  reduce usando la regla 126 (factor)


estado 86

  117 expresion: '(' . expresion_parentesis ')'

    ID          desplazar e ir al estado 85
    CTE_SHORT   desplazar e ir al estado 70
    CTE_UINT    desplazar e ir al estado 71
    CTE_DOUBLE  desplazar e ir al estado 72
    '('         desplazar e ir al estado 121
    '-'         desplazar e ir al estado 87

    expresion_parentesis  ir al estado 122
    termino               ir al estado 123
    factor                ir al estado 94
    constante             ir al estado 95


estado 87

  127 factor: '-' . constante

    CTE_SHORT   desplazar e ir al estado 70
    CTE_UINT    desplazar e ir al estado 71
    CTE_DOUBLE  desplazar e ir al estado 72

    constante  ir al estado 124


estado 88

   88 comparador: '<' .

    $default  reduce usando la regla 88 (comparador)


estado 89

   89 comparador: '>' .

    $default  reduce usando la regla 89 (comparador)


estado 90

   78 seleccion: IF '(' condicion . ')' bloque_if ELSE bloque_else END_IF
   79          | IF '(' condicion . ')' bloque_if END_IF
   80          | IF '(' condicion . ')' bloque_if
   81          | IF '(' condicion . ')' bloque_if ELSE bloque_else

    ')'  desplazar e ir al estado 125


estado 91

   86 condicion: comparador . expresion

    SHORT       desplazar e ir al estado 2
    UINT        desplazar e ir al estado 3
    DOUBLE      desplazar e ir al estado 4
    ID          desplazar e ir al estado 85
    CTE_SHORT   desplazar e ir al estado 70
    CTE_UINT    desplazar e ir al estado 71
    CTE_DOUBLE  desplazar e ir al estado 72
    '('         desplazar e ir al estado 86
    '-'         desplazar e ir al estado 87

    expresion  ir al estado 126
    termino    ir al estado 93
    factor     ir al estado 94
    constante  ir al estado 95
    tipo       ir al estado 96


estado 92
